Add data directory

--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,7 @@ venv.bak/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+#/data/
 
 # Mac OS-specific storage files
 .DS_Store
